FIxes spacing between items

--- a/static/sidebar.less
+++ b/static/sidebar.less
@@ -104,8 +104,8 @@ img.social-icon-small {
 							font-weight: bold;
 							text-transform: uppercase;
 							& + [aria-pressed="true"] + ul {
-								line-height: @list-line-height;
 								padding-left: 5px;
+								margin-top: -10px;
 							}
 						}
 						a {
